--- a/HTML/styles/general.css
+++ b/HTML/styles/general.css
@@ -6,9 +6,6 @@
 }
 
 body {
-  display: grid;
-  grid-template-columns: 240px 1fr;
-  grid-template-rows: 110px 1fr;
   background-color: #0F0F0F;
-  overflow: scroll;
+  overflow: auto;
 }
