--- a/HTML/styles/video.css
+++ b/HTML/styles/video.css
@@ -1,7 +1,5 @@
 main {
-  padding: 24px 24px 0 24px;
-  grid-row: 2;
-  grid-column: 2;
+  padding: 24px;
 }
 
 .video-grid-container{
@@ -11,6 +9,23 @@ main {
   row-gap: 26px;
 }
 
+@media (max-width: 2000px) {
+  .video-grid-container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (max-width: 950px) {
+  .video-grid-container {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 560px) {
+  .video-grid-container {
+    grid-template-columns: 1fr;
+  }
+}
 .video-info-grid {
   display: grid;
   grid-template-columns: 40px 1fr;
@@ -34,18 +49,18 @@ main {
 }
 
 .video-title {
-  font-size: 16px;
+  font-size: 1rem;
   margin: 0 0 6px 0;
   color: white;
 }
 
 .video-author, .video-stats {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 400;
   color: rgb(170, 170, 170);
 }
 
 .video-stats {
-  line-height: 22px;
+  line-height: 1.375rem;
 }
 
